--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a href="" class="nav-link active">Home</a></li>
         <li class="nav-=item"><a href="#about" class="nav-link">About</a></li>
-           <li class="nav-=item"><a href="" class="nav-link">Join Movement</a></li>
+           <li class="nav-=item"><a href="/join" class="nav-link">Join Movement</a></li>
             <li class="nav-=item"><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
       
